<!--
  ~
  ~ # Copyright 2016 Intellisis Inc.  All rights reserved.
  ~ #
  ~ # Use of this source code is governed by a BSD-style
  ~ # license that can be found in the LICENSE file
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.knurld.alphabank.AccountsActivity"
    tools:showIn="@layout/activity_accounts">


    <ImageView
        android:id="@+id/imageview_logo"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/alphabank" />


    <LinearLayout
        android:id="@+id/llaudio"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview_logo"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_balance"
            android:textSize="34sp" />


    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llaudio"
        android:gravity="center_horizontal">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip">

            <TextView
                android:id="@+id/account_balance1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/account_balance1"
                android:textSize="20dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/account_balance1"
                android:paddingLeft="75dp"
                android:paddingTop="20dp"
                android:text="@string/account_balance11"
                android:textSize="20dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip">

            <TextView
                android:id="@+id/account_balance2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_balance1"
                android:paddingTop="20dp"
                android:text="@string/account_balance2"

                android:textSize="20dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_balance1"
                android:layout_toEndOf="@+id/account_balance2"
                android:paddingLeft="75dp"
                android:paddingTop="20dp"
                android:text="@string/account_balance21"

                android:textSize="20dp"
                android:textStyle="bold" />
        </TableRow>


        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip">

            <TextView
                android:id="@+id/account_balance3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_balance2"
                android:paddingTop="20dp"

                android:text="@string/account_balance3"
                android:textSize="20dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_balance2"
                android:layout_toEndOf="@+id/account_balance3"
                android:paddingLeft="75dp"
                android:paddingTop="20dp"

                android:text="@string/account_balance31"
                android:textSize="20dp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/knurld_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powered_by_knurld_message"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/knurld_logo"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/knulrd_logo" />

    </LinearLayout>

</RelativeLayout>